[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Sprites/torreta inseto contornada.png" type="Texture" id=1]
[ext_resource path="res://Assets/Torreta/Torreta.gd" type="Script" id=2]
[ext_resource path="res://Engine/HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Engine/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Engine/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Aim.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/ScreenVerificator.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32.3798, 32.0769 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 32 )

[sub_resource type="CircleShape2D" id=4]
radius = 250.0

[node name="Torreta" type="KinematicBody2D"]
position = Vector2( 2, 1 )
collision_layer = 16
collision_mask = 19
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 5 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 3 )

[node name="Stats" parent="." instance=ExtResource( 4 )]
MaxHealth = 2

[node name="StunTimer" type="Timer" parent="."]

[node name="Range" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="Range" index="0"]
shape = SubResource( 4 )

[node name="VisibilityNotifier2D" parent="." instance=ExtResource( 7 )]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]

[editable path="HurtBox"]

[editable path="Hitbox"]

[editable path="Range"]
